Fix wrong color in collapsed navbar menu

--- a/src/scss/_bootstrap-overrides.scss
+++ b/src/scss/_bootstrap-overrides.scss
@@ -29,25 +29,25 @@ a {
 }
 
 .btn-primary {
-  background-color: $primary;
-  border-color: $primary;
+  background-color: $primary !important;
+  border-color: $primary !important;
   &:hover,
   &:focus,
   &:active {
-    background-color: darken($primary, 10%);
-    border-color: darken($primary, 10%);
+    background-color: darken($primary, 10%) !important;
+    border-color: darken($primary, 10%) !important;
   }
 }
 
 
 .btn-outline-primary {
-  color: $primary;
-  border-color: $primary;
+  color: $primary !important;
+  border-color: $primary !important;
   &:hover,
   &:focus,
   &:active {
-    background-color: darken($primary, 10%);
-    border-color: darken($primary, 10%);
+    background-color: darken($primary, 10%) !important;
+    border-color: darken($primary, 10%) !important;
   }
 }
 
